--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>APP TO DO LIST</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap"
@@ -20,8 +21,8 @@
     <div class="container">
       <div class="profil">
         <div id="date"></div>
-        <h1>To-Do-List</h1>
-        <span>Whats' news ?</span>
+        <h1>Ma petite liste</h1>
+        <span>Listez vos taches</span>
       </div>
       <div class="ajouter-tache">
         <input type="text" id="input" placeholder="Ajoute une tâche" />
@@ -29,7 +30,7 @@
       </div>
       <div class="liste-container">
         <div class="section-tache">
-          <h3>To Do</h3>
+          <h3>A faire</h3>
           <ul id="liste"></ul>
         </div>
         <div class="section-tache">
